<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/tv_trophy"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_trophy" />

    <TextView
        android:id="@+id/tv_congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/hey_congratulations"
        android:textStyle="bold"
        android:textSize="25sp" />
     <TextView
         android:id="@+id/tv_username"
         tools:text="Username"
         android:layout_width="wrap_content"
         android:textStyle="bold"
         android:textSize="22sp"
         android:textColor="@color/white"
         android:layout_marginTop="20dp"
         android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/secondary_text_dark"
        android:layout_marginTop="10dp"
        android:text="@string/your_score_is_9_out_of_10"
        />
    <Button
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/finish"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="@android:color/white"/>

</LinearLayout>