<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/app_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quizify"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#363A43"
                android:textSize="30sp"
                android:text="@string/welcome"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#7A8089"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="#363A43"
                    android:textColorHint="#7A8089"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_start"
                android:background="@color/purple_500"
                android:text="@string/start"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>